// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with a some props and children 1`] = `
<Sidebar
  className=""
  container="parent"
  footer=""
  header=""
  loaderLabel=""
  loading={false}
  maximized={false}
  onClickBack={null}
  onClickClose={null}
  onClose={null}
  onMaximize={null}
  onOpen={null}
  onUnmaximize={null}
  opened={true}
  position="left"
  scrollContent={false}
  title=""
  width="md"
>
  <Sidebar.Header
    className=""
  >
    A title content
  </Sidebar.Header>
  <Sidebar.Footer
    className=""
  >
    A footer content
  </Sidebar.Footer>
</Sidebar>
`;

exports[`When using snapshots Should render with a title 1`] = `
<styled.span>
  <Sidebar
    className=""
    container="parent"
    footer=""
    header=""
    key=".0"
    loaderLabel=""
    loading={false}
    maximized={false}
    onClickBack={null}
    onClickClose={null}
    onClose={null}
    onMaximize={null}
    onOpen={null}
    onUnmaximize={null}
    opened={true}
    position="left"
    scrollContent={false}
    title="A title"
    width="md"
  >
    <div />
  </Sidebar>
</styled.span>
`;

exports[`When using snapshots Should render with an element children 1`] = `
<styled.span>
  <Sidebar
    className=""
    container="parent"
    footer=""
    header=""
    key=".0"
    loaderLabel=""
    loading={false}
    maximized={false}
    onClickBack={null}
    onClickClose={null}
    onClose={null}
    onMaximize={null}
    onOpen={null}
    onUnmaximize={null}
    opened={true}
    position="left"
    scrollContent={false}
    title=""
    width="md"
  >
    <div />
  </Sidebar>
</styled.span>
`;

exports[`When using snapshots Should render with the loading prop 1`] = `
<styled.span>
  <Sidebar
    className=""
    container="parent"
    footer=""
    header=""
    key=".0"
    loaderLabel=""
    loading={true}
    maximized={false}
    onClickBack={null}
    onClickClose={null}
    onClose={null}
    onMaximize={null}
    onOpen={null}
    onUnmaximize={null}
    opened={true}
    position="left"
    scrollContent={false}
    title=""
    width="md"
  >
    <div />
  </Sidebar>
</styled.span>
`;
